next version of web file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <<h1>firas gacha hhhhhhhhhhhh</h1>
+    <<h1>firas***************** gacha hhhhhhhhhhhh</h1>
   </body>
 </html>
